--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "chalk": "^1.1.3",
     "co": "^4.6.0",
     "co-express": "^1.2.1",
-    "coffee-script": "1.9.x",
+    "coffeescript": "2.2.3",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^1.2.0",
@@ -87,7 +87,7 @@
     "mongoose-cache": "https://github.com/nwinter/mongoose-cache/tarball/master",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
-    "node-force-domain": "~0.1.0",
+    "forcedomain": "^0.8.1",
     "node-gyp": "~0.13.0",
     "node-statsd": "^0.1.1",
     "passport": "0.1.x",
